Change Background image Fix overflow code block

--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -1,9 +1,5 @@
 html {
-  background: url(../img/background.jpg) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+  background: url(../img/geometry2.png) repeat;
   margin: 0 !important;
   padding: 0 !important;
   width: 100%;
