--- a/_sass/_syntax-highlighting.scss
+++ b/_sass/_syntax-highlighting.scss
@@ -7,6 +7,7 @@
 
   .highlighter-rouge & {
     background: #fff;
+    overflow-x: auto;
   }
 
   .c {
